# NeonDslash

./: configure.ac  neon_dslash_impl.h  neon_dslash_types.h
extra/: lwldslash_w_neon.cc  lwldslash_w_neon.h
include/: Makefile.am  dslash_table.h  neon_dslash.h  neon_dslash_details.h  neon_dslash_impl.h  neon_dslash_types.h  shift_table.h
lib/: Makefile.am  dslash_table.cc  neon_dslash.cc  neon_dslash_impl.cc  shift_table.cc
